test/error/missing_endinterface_1.sv
// pattern: missing expected `endinterface`
interface foo;
